Codificacionde form index y funciones js

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+    <form  action="">
+        <input type="text" id="num1">
+        <input type="text" id="num2">
+        <input type="button" value="Sumar" onclick="alert( suma() );"> 
+    </form>
     
     <script src="funciones.js"></script>
 </body>
