Se codificó scope.js de variables globales y locales

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
         <input type="button" value="Sumar" onclick="alert( suma() );"> 
     </form>
     
-    <script src="funciones.js"></script>
+    <script src="scope.js"></script>
 </body>
 </html>
