Metodos y propiedades en JS, se agrego un DOM

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
         <input type="button" value="Sumar" onclick="alert( suma() );"> 
     </form>
     
-    <script src="scope.js"></script>
+    <script src="MetodsyProp.js"></script>
 </body>
 </html>
