Creacion de nodos DOM

--- a/DOM.html
+++ b/DOM.html
@@ -8,6 +8,7 @@
 <body>
 
     <h1>Titulo de nuestro sitio web</h1>
+    <div id="subtitulo"></div>
     <p id="primero">
         1.- HTML es un lenguaje de marcado que usa la estructura para dar un sentido al contenido web,
         por ejemplo define párrafos, cabeceras, tablas, imágenes y vídeos en la página.
