Modificar, reemplazar y eliminar DOM

--- a/DOMNodos.html
+++ b/DOMNodos.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <ol id="lista">
-        <li>HTML es un lenguaje de marcado que usa la estructura para dar un sentido al contenido web</li>
+        <li id="primero">HTML es un lenguaje de marcado que usa la estructura para dar un sentido al contenido web</li>
         <li>CSS es un lenguaje de reglas en cascada que usamos para aplicar un estilo a nuestro contenido en HTML</li>
     </ol>
 
-    <script src="domNodo.js"></script>
+    <script src="ModNodo.js"></script>
 </body>
 </html>
