Modificar estilo de elementos

--- a/encabezado.html
+++ b/encabezado.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <h1 id="encabezado" class="titulo tituloGrande">Encabezado</h1>
-
+    <form action="">
+        <input type="button" value="Cambio de tamaño" onclick="zoom();">
+    </form>
+    <img id="thumb" class="thumb" src="http://lorempixel.com/400/400/" width="400" alt="">
+    
     <script src="js/encabezado.js"></script>
+    <script src="js/zoomImg.js"></script>
 </body>
 </html>
