Se movieron los archivos a sus respectivas rutas

--- a/Forms.html
+++ b/Forms.html
@@ -17,6 +17,6 @@
         <input type="submit" id="btn" name="btn" value="Enviar">
     </form>
 
-    <script src="js/validaForms.js"></script>
+    <script src="js/validaForms.js"></script>git init
 </body>
 </html>
